Add missing files

--- a/src/Coevery.Web/Core/Common/Views/ClientBootstrapScript.cshtml
+++ b/src/Coevery.Web/Core/Common/Views/ClientBootstrapScript.cshtml
@@ -18,7 +18,7 @@
             });
 
             //Now load code.
-            require(['@Url.Content("~/Modules/Coevery.Common/scripts/app/main.js")']);
+            require(['@Url.Content("~/Core/Common/scripts/app/main.js")']);
         }());
     //]]>
 
