--- a/src/Coevery.Web/Themes/MooncakeAdmin/Views/MooncakeResource.cshtml
+++ b/src/Coevery.Web/Themes/MooncakeAdmin/Views/MooncakeResource.cshtml
@@ -1,5 +1,4 @@
-﻿@using System.Web.Http.ModelBinding
-@{
+﻿@{
     Style.Include("layout-base.css");
     Style.Include("layout-systemadmin.css");
     Style.Include("site-systemadmin.css");
@@ -7,5 +6,5 @@
 
     Script.Include("js/setup-systemadmin.js");
     
-    Style.Include("bootstrap-datetimepicker.min.css");
+    //Style.Include("bootstrap-datetimepicker.min.css");
 }
