--- a/src/Coevery.Web/Core/Entities/Views/SystemAdmin/CreateDependency.cshtml
+++ b/src/Coevery.Web/Core/Entities/Views/SystemAdmin/CreateDependency.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coevery.Utility.Extensions
-@model Coevery.Entities.ViewModels.FieldDependencyViewModel
+@model Coevery.Core.Entities.ViewModels.FieldDependencyViewModel
 <header id="main-header" class="page-header" style="background-image: none; margin-bottom: 0;">
     <h1 id="main-heading" style="background-image: none;">Field Dependency <span>Define dependencies between fields</span></h1>
 </header>
