--- a/src/Coevery.Web/Core/Entities/Views/SystemAdmin/EditDependency.cshtml
+++ b/src/Coevery.Web/Core/Entities/Views/SystemAdmin/EditDependency.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Entities.ViewModels.FieldDependencyViewModel
+﻿@model Coevery.Core.Entities.ViewModels.FieldDependencyViewModel
 
 
 <!DOCTYPE html>
