--- a/src/Coevery.Web/Core/Entities/Views/SystemAdmin/ChooseFieldType.cshtml
+++ b/src/Coevery.Web/Core/Entities/Views/SystemAdmin/ChooseFieldType.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Entities.ViewModels.AddFieldViewModel
+﻿@model Coevery.Core.Entities.ViewModels.AddFieldViewModel
 
 <h5>Step 1. Choose the field type</h5>
 <div class="row-fluid">
