--- a/src/Coevery.Web/Core/Entities/Views/SystemAdmin/FillFieldInfo.cshtml
+++ b/src/Coevery.Web/Core/Entities/Views/SystemAdmin/FillFieldInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Entities.ViewModels.AddFieldViewModel
+﻿@model Coevery.Core.Entities.ViewModels.AddFieldViewModel
 <div class="row-fluid">
     <h5>Step 2. Enter the detail informations</h5>
     <div class="widget-content form-container edit-mode">
