Update the Coevery.developer namespace and reference

--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/ChooseFieldType.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/ChooseFieldType.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Core.Entities.ViewModels.AddFieldViewModel
+﻿@model Coevery.DeveloperTools.ViewModels.AddFieldViewModel
 
 <h5>Step 1. Choose the field type</h5>
 <div class="row-fluid">
