--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/CreateEditInfo.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/CreateEditInfo.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coevery.Utility.Extensions
-@model Coevery.Core.Entities.ViewModels.AddFieldViewModel
+@model Coevery.DeveloperTools.ViewModels.AddFieldViewModel
 <div>
     <div class="modal-header">
         <button type="button" class="close" ng-click="exit()">&#215</button>
