--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/DependencyList.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/DependencyList.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coevery.Utility.Extensions
-@model Coevery.Core.Entities.ViewModels.FieldDependencyViewModel
+@model Coevery.DeveloperTools.ViewModels.FieldDependencyViewModel
 <div id="page-title">
     <h1 id="main-heading" class="pull-left" style="background-image: none;">Field Dependency <span>Define dependencies between fields</span></h1>
 </div>
