--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/EditDependency.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/EditDependency.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Core.Entities.ViewModels.FieldDependencyViewModel
+﻿@model Coevery.DeveloperTools.ViewModels.FieldDependencyViewModel
 
 
 <!DOCTYPE html>
