--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/Detail.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/SystemAdmin/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Core.Entities.ViewModels.EntityDetailViewModel
+﻿@model Coevery.DeveloperTools.ViewModels.EntityDetailViewModel
 <header id="page-title">
     <h1 class="pull-left">Entity Detail <span>show entity detail information</span></h1>
 </header>
