--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/EntityAdmin/Create.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/EntityAdmin/Create.cshtml
@@ -117,7 +117,7 @@
         //Auto get name
         var $name = $("#EntityName");
         var $displayName = $(".labelForName");
-        var jsonUrl = "@Url.Action("EntityName", "SystemAdmin", new RouteValueDictionary {{"Area", "Coevery.Entities"}})";
+        var jsonUrl = "@Url.Action("EntityName", "EntityAdmin", new RouteValueDictionary {{"Area", "Coevery.DeveloperTools"}})";
         var version = 0;
 
         var nameAltered;
