Update path error to fix the filed name cannot auto complete error

--- a/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/EntityAdmin/Create.cshtml
+++ b/src/Coevery.Web/Modules/Coevery.DeveloperTools/Views/EntityAdmin/Create.cshtml
@@ -156,7 +156,7 @@
 
         var $fieldName = $("#FieldName");
         var $displayFieldName = $(".labelForFieldName");
-        var jsonUrlFieldName = '@Url.Action("FieldName", "SystemAdmin", new RouteValueDictionary {{"Area", "Coevery.Entities"}})';
+        var jsonUrlFieldName = '@Url.Action("FieldName", "FieldAdmin", new RouteValueDictionary {{"Area", "Coevery.DeveloperTools"}})';
         var versionFieldName = 0;
 
         var nameAlteredFieldName;
