Update namespace for developerTools

--- a/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Create.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Create.cshtml
@@ -1,4 +1,4 @@
-@model Coevery.DeveloperTools.ViewModels.EditTypeViewModel        
+@model Coevery.DeveloperTools.Entities.ViewModels.EditTypeViewModel        
 <header id="page-title">
     <h1 class="pull-left">@T("New Entity") <span>Create a new entity</span></h1>
 </header>
