--- a/src/Coevery.Web/DeveloperTools/Entities/Views/FieldAdmin/FillFieldInfo.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/FieldAdmin/FillFieldInfo.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.DeveloperTools.ViewModels.AddFieldViewModel
+﻿@model Coevery.DeveloperTools.Entities.ViewModels.AddFieldViewModel
 <div class="row-fluid">
     <h5>Step 2. Enter the detail informations</h5>
     <div class="widget-content form-container edit-mode">
