--- a/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Detail.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Detail.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.DeveloperTools.ViewModels.EntityDetailViewModel
+﻿@model Coevery.DeveloperTools.Entities.ViewModels.EntityDetailViewModel
 <header id="page-title">
     <h1 class="pull-left">Entity Detail <span>show entity detail information</span></h1>
 </header>
