--- a/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/EntityAdmin/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.DeveloperTools.ViewModels.EditTypeViewModel
+﻿@model Coevery.DeveloperTools.Entities.ViewModels.EditTypeViewModel
 <header id="page-title">
     <h1 class="pull-left">@T("Entity Detail ") <span>show entity detail information</span></h1>
 </header>
