--- a/src/Coevery.Web/DeveloperTools/Entities/Views/FieldAdmin/EditFields.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/FieldAdmin/EditFields.cshtml
@@ -1,8 +1,9 @@
 ﻿@using Coevery.Core.Entities.Settings
+@using Coevery.DeveloperTools.Entities.Settings
 @using Coevery.DeveloperTools.Settings
 @using Coevery.Entities.Settings
 @using Coevery.Utility.Extensions
-@model Coevery.DeveloperTools.ViewModels.EditPartFieldViewModel
+@model Coevery.DeveloperTools.Entities.ViewModels.EditPartFieldViewModel
 @{
     var fieldSettingsPrefix = Model.FieldDefinition.Name + "Settings";
     var settings = Model.Settings.GetModel<FieldSettings>(fieldSettingsPrefix);
