--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/BooleanFieldDisplaySettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/BooleanFieldDisplaySettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.BooleanFieldDisplaySettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.BooleanFieldDisplaySettings
 
 <section class="control-group">
     <label class="control-label">
