--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model DateFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.DateFieldSettings
 @using System.Globalization
 @using Coevery.Core.Shapes.Localization
 @using Coevery.Fields.Settings;
