--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DatetimeFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DatetimeFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.DatetimeFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.DatetimeFieldSettings
 @using System.Globalization
 @using Coevery.Core.Shapes.Localization
 @using Coevery.Fields.Settings;
