--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/NumberFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/NumberFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.NumberFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.NumberFieldSettings
 
 <section class="control-group data-row">
     <label class="control-label" for="numberLength">
