--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/TextFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/TextFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.TextFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.TextFieldSettings
 
 <section class="control-group data-row">
     <label class="control-label" for="textLength">
