--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Date.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Date.Edit.cshtml
@@ -1,7 +1,8 @@
-﻿@model Coevery.Fields.Fields.DateField
+﻿@model Coevery.DeveloperTools.Fields.Fields.DateField
 @using System.Data.Linq.Mapping
 @using System.Globalization
 @using Coevery.Core.Shapes.Localization
+@using Coevery.DeveloperTools.Fields.Settings
 @using Coevery.Utility.Extensions;
 @using Coevery.Fields.Settings;
 @{
