--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Datetime.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Datetime.Edit.cshtml
@@ -1,6 +1,7 @@
-﻿@model Coevery.Fields.Fields.DatetimeField
+﻿@model Coevery.DeveloperTools.Fields.Fields.DatetimeField
 @using System.Globalization
 @using Coevery.Core.Shapes.Localization
+@using Coevery.DeveloperTools.Fields.Settings
 @using Coevery.Fields.Settings;
 @{
     var settings = Model.PartFieldDefinition.Settings.GetModel<DatetimeFieldSettings>();
