--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/CurrencyFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/CurrencyFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.CurrencyFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.CurrencyFieldSettings
 
 <section class="control-group data-row">
     <label class="control-label">
