--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/PhoneFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/PhoneFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.PhoneFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.PhoneFieldSettings
 
 <section class="control-group data-row">
     <label class="control-label" for="textLength">
