--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/UrlFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/UrlFieldSettings.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.Fields.Settings.UrlFieldSettings
+﻿@model Coevery.DeveloperTools.Fields.Settings.UrlFieldSettings
 
 <section class="control-group data-row">
     <label class="control-label" for="textLength">
