--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Boolean.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Boolean.Edit.cshtml
@@ -1,15 +1,13 @@
-﻿@model Coevery.Fields.Fields.BooleanField
-@using Coevery.Utility.Extensions;
-@using Coevery.Fields.Settings;
+﻿@model Coevery.DeveloperTools.Fields.Fields.BooleanField
+@using Coevery.DeveloperTools.Fields.Settings
 @{
     var settings = Model.PartFieldDefinition.Settings.GetModel<BooleanFieldSettings>();
     var settingname = Model.PartFieldDefinition.Name;
     var required = settings.Required ? "required" : null;
-    var classString = settings.DependencyMode == DependentType.Control ? "control controls controlField" : "control controls";
 }
 
 <label class="title control-label @required" for="@Html.FieldIdFor(m => m.Value)">@Model.DisplayName</label>
-<div class="@classString errortips" data-name ="@settingname">
+<div class="errortips" data-name ="@settingname">
     @switch (settings.SelectionMode) {
         case BooleanDisplayMode.Checkbox:
             <label class="checkbox" for="@(Html.FieldIdFor(m => m.Value))" >
