--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Currency.Edit.cshtml
@@ -1,6 +1,5 @@
-﻿@model Coevery.Fields.Fields.CurrencyField
-@using Coevery.Utility.Extensions;
-@using Coevery.Fields.Settings;
+﻿@model Coevery.DeveloperTools.Fields.Fields.CurrencyField
+@using Coevery.DeveloperTools.Fields.Settings
 @{
     var settings = Model.PartFieldDefinition.Settings.GetModel<CurrencyFieldSettings>();
     var required = settings.Required ? "required" : null;
