--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Email.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/Email.Edit.cshtml
@@ -1,10 +1,8 @@
-﻿@model Coevery.Fields.Fields.EmailField
-@using Coevery.Utility.Extensions;
-@using Coevery.Fields.Settings;
+﻿@model Coevery.DeveloperTools.Fields.Fields.EmailField
+@using Coevery.DeveloperTools.Fields.Settings
 @{
     var settings = Model.PartFieldDefinition.Settings.GetModel<EmailFieldSettings>();
 }
-
 
 <label class="control-label @(settings.Required ? "required" : string.Empty)" for="@Html.FieldIdFor(m => m.Value)">@Model.DisplayName</label>
 <div class="control controls errortips">
