--- a/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/EditorTemplates/Fields/MultilineText.Edit.cshtml
@@ -1,6 +1,5 @@
-﻿@model Coevery.Fields.Fields.MultilineTextField
-@using Coevery.Utility.Extensions;
-@using Coevery.Fields.Settings;
+﻿@model Coevery.DeveloperTools.Fields.Fields.MultilineTextField
+@using Coevery.DeveloperTools.Fields.Settings
 @{
     var settings = Model.PartFieldDefinition.Settings.GetModel<MultilineTextFieldSettings>();
     var required = settings.Required ? "required" : null;
