--- a/src/Coevery.Web/DeveloperTools/Entities/Views/Admin/CreateEditInfo.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Entities/Views/Admin/CreateEditInfo.cshtml
@@ -180,7 +180,7 @@
             var $displayName = $(".labelForName");
             var $entityName = '@Request.Url.Segments.LastOrDefault()';
 
-            var jsonUrl = '@Url.Action("FieldName", "Admin", new RouteValueDictionary { { "Area", "Coevery.Entities" } })';
+            var jsonUrl = '@Url.Action("FieldName", "Admin", new RouteValueDictionary { { "Area", "Entities" } })';
             var version = 0;
 
             var nameAltered;
