--- a/src/Coevery.Web/DeveloperTools/Formdesigner/Views/FormTemplate/FormDesignerLayout.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Formdesigner/Views/FormTemplate/FormDesignerLayout.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Coevery.DeveloperTools.Formdesigner.Models
+@using Coevery.DeveloperTools.FormDesigner.Models
 @{
     var sectionList = (ICollection<Section>)ViewData["Layout"];
 }
