--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
@@ -1,7 +1,6 @@
 ﻿@model Coevery.DeveloperTools.Fields.Settings.DateFieldSettings
 @using System.Globalization
-@using Coevery.Core.Shapes.Localization
-@using Coevery.Fields.Settings;
+@using Coevery.Core.Common.Shapes.Localization
 
 @{
     var cultureInfo = CultureInfo.GetCultureInfo(WorkContext.CurrentCulture);
