--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DatetimeFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DatetimeFieldSettings.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Coevery.DeveloperTools.Fields.Settings.DatetimeFieldSettings
 @using System.Globalization
-@using Coevery.Core.Shapes.Localization
-@using Coevery.Fields.Settings;
+@using Coevery.Core.Common.Shapes.Localization
+@using Coevery.DeveloperTools.Fields.Settings;
 
 @{
 
