--- a/src/Coevery.Web/Themes/MooncakeBase/Views/BaseResource.cshtml
+++ b/src/Coevery.Web/Themes/MooncakeBase/Views/BaseResource.cshtml
@@ -39,8 +39,8 @@
     Style.Require("jqGridCustom");
     Style.Include("jquery.tabledrag.css");
 
-    //Style.Require("Bootstrap_Datetimepicker");
-    //Script.Require("Bootstrap_Datetimepicker");
+    Style.Require("Bootstrap_Datetimepicker");
+    Script.Require("Bootstrap_Datetimepicker");
     Script.Require("jQueryValidate");
     Script.Require("underscore");
     Script.Require("angularunderscore");
