--- a/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Fields/Views/DefinitionTemplates/DateFieldSettings.cshtml
@@ -6,7 +6,7 @@
     var cultureInfo = CultureInfo.GetCultureInfo(WorkContext.CurrentCulture);
     var dateTimeLocalization = WorkContext.Resolve<IDateTimeLocalization>();
 
-    Func<DateTime?, string> FormatDate = date => date != null ? date.Value.ToString(dateTimeLocalization.ShortDateFormat.Text, cultureInfo) : null;
+    Func<DateTime?, string> FormatDate = date => date != null ? date.Value.ToString(T("MM/dd/yyyy HH:mm tt").Text, cultureInfo) : null;
 }
 
 <section class="control-group data-row" data-co-datetime-picker="date">
