--- a/src/Coevery.Web/DeveloperTools/FormDesigner/Views/FormTemplate/FormDesignerLayout.cshtml
+++ b/src/Coevery.Web/DeveloperTools/FormDesigner/Views/FormTemplate/FormDesignerLayout.cshtml
@@ -1,17 +1,16 @@
-﻿@using Coevery.DeveloperTools.Formdesigner.Models
-@using Coevery.DeveloperTools.FormDesigner.Models
+﻿@using Coevery.DeveloperTools.FormDesigner.Models
 @{
     var sectionList = (ICollection<Section>)ViewData["Layout"];
 }
 
 @foreach (var layoutSection in sectionList) {
-    <div fd-section section-columns="@layoutSection.SectionColumns" section-columns-width="@layoutSection.SectionColumnsWidth" section-title="@layoutSection.SectionTitle">
+    <div fd-section="" section-columns="@layoutSection.SectionColumns" section-columns-width="@layoutSection.SectionColumnsWidth" section-title="@layoutSection.SectionTitle">
         @foreach (var row in layoutSection.Rows) {
-            <div fd-row @if (row.IsMerged) { <text>class="merged-row"</text> }>
+            <div fd-row="" @if (row.IsMerged) { <text>class="merged-row"</text> }>
                 @foreach (var column in row.Columns) {
-                    <div fd-column>
+                    <div fd-column="">
                         @if (column.Field != null && column.Field.IsValid) {
-                            <div fd-field field-name="@column.Field.FieldName"></div>
+                            <div fd-field="" field-name="@column.Field.FieldName"></div>
                         }
                     </div>
                 }
