--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/Admin/CreateOneToMany.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/Admin/CreateOneToMany.cshtml
@@ -1,8 +1,7 @@
 ﻿@using System.Web.Mvc
 @using System.Web.Routing
 @using Coevery.DeveloperTools.Relationship.Records
-@using Coevery.Relationship.Models
-@using Coevery.Relationship.Records
+@using Coevery.DeveloperTools.Relationship.Models
 @using System.Web.Mvc.Html
 @using Coevery.Mvc.Html
 @model Coevery.DeveloperTools.Relationship.Models.OneToManyRelationshipModel
