--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Web.Mvc.Html
 @using Coevery.Mvc.Html
-@using Coevery.Relationship.Settings
+@using Coevery.DeveloperTools.Relationship.Settings
 @model Coevery.DeveloperTools.Relationship.Settings.ReferenceFieldSettings
 
 @{
