--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldSettings.cshtml
@@ -1,7 +1,7 @@
 ﻿@using System.Web.Mvc.Html
 @using Coevery.Mvc.Html
 @using Coevery.DeveloperTools.Relationship.Settings
-@model Coevery.DeveloperTools.Relationship.Settings.ReferenceFieldSettings
+@model Coevery.Core.Reference.Settings.ReferenceFieldSettings
 
 @{
     string disabled = string.Empty;
