--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/EditorTemplates/Fields/Reference.Edit.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/EditorTemplates/Fields/Reference.Edit.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Coevery.DeveloperTools.Relationship.Models.ReferenceFieldViewModel
 @using System.Web.Mvc.Html
+@using Coevery.Core.Reference.Settings
 @using Coevery.DeveloperTools.Relationship.Settings
 @using Coevery.Mvc.Html
 @{
