--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldEntityRecord.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/DefinitionTemplates/ReferenceFieldEntityRecord.cshtml
@@ -1,4 +1,4 @@
-﻿@model Coevery.DeveloperTools.Relationship.Settings.ReferenceFieldSettings
+﻿@model Coevery.Core.Reference.Settings.ReferenceFieldSettings
 <section class="data-row control-group">
     <label class="control-label required" for="ReferenceFieldSettings.ContentTypeName">@T("Primary Entity")</label>
     <div class="controls errortips">
