--- a/src/Coevery.Web/DeveloperTools/Relationship/Views/Admin/CreateOneToMany.cshtml
+++ b/src/Coevery.Web/DeveloperTools/Relationship/Views/Admin/CreateOneToMany.cshtml
@@ -1,11 +1,7 @@
-﻿@using System.Web.Mvc
-@using System.Web.Routing
-@using Coevery.Core.Reference.Records
-@using Coevery.DeveloperTools.Relationship.Records
-@using Coevery.DeveloperTools.Relationship.Models
+﻿@using Coevery.Core.Reference.Records
 @using System.Web.Mvc.Html
 @using Coevery.Mvc.Html
-@model Coevery.DeveloperTools.Relationship.Models.OneToManyRelationshipModel
+@model Coevery.Core.Reference.Models.OneToManyRelationshipModel
     
 @helper DisplayInput(string label, HtmlString input, string labelClass) {
     <section class="data-row control-group">
