Remove unused view models

--- a/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/List.cshtml
+++ b/src/Coevery.Web/DeveloperTools/ListViewDesigner/Views/Admin/List.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Coevery.Core.Projections.Descriptors.Layout
-@model Coevery.Core.Projections.ViewModels.EntityViewListModel
+@model Coevery.DeveloperTools.ListViewDesigner.ViewModels.EntityViewListModel
 
 @helper AddLayoutButton(LayoutDescriptor type) {
     <li>
