--- a/src/Coevery.Web/Core/Reference/Views/DisplayTemplates/Reference.cshtml
+++ b/src/Coevery.Web/Core/Reference/Views/DisplayTemplates/Reference.cshtml
@@ -1,5 +1,4 @@
-﻿
-<section class="control-group">
+﻿<section class="control-group">
     <div class="controls">
         <label class="radio">
             <input type="radio" ng-model="fieldType" value="ReferenceField">
