Move necessary files

--- a/src/Coevery.Web/Core/Relationships/Views/RelatedEntityList.cshtml
+++ b/src/Coevery.Web/Core/Relationships/Views/RelatedEntityList.cshtml
@@ -1,4 +1,4 @@
-﻿@using Coevery.DeveloperTools.RelationshipManagement.ViewModels
+﻿@using Coevery.Core.Relationships.ViewModels
 @{
     var relationships = (IList<RelatedEntityViewModel>)Enumerable.Cast<RelatedEntityViewModel>(Model.Relationships);
 }
